# agent-office

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
adapters/slack/: bot.py  handlers.py  voice.py
adapters/telegram/: bot.py  handlers.py
agent/: executor.py  pipeline.py  planner.py  prompts.py
auth/: oauth_server.py
core/: confirmations.py  context.py  logging.py  models.py  policies.py  security.py
services/: calendar.py  drive.py  gmail.py
services/transcription/: base.py  openai_whisper.py  whisper_cpp.py
setup/: app.py
tests/: test_models.py  test_plan_validation.py  test_workspace_cli.py
tools/: registry.py  workspace_cli.py
tools/google_api/: auth.py  calendar.py  drive.py  gmail.py
